// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`datetime loader 13:00 throws an error 1`] = `
"'value' must contain a valid date or date and time, for instance '1997-07-16' or '1994-11-05T13:15Z' (see https://www.w3.org/TR/NOTE-datetime).

   Line | Content
 >    1 | value: 13:00
"
`;

exports[`datetime loader 2002 12 14 throws an error 1`] = `
"'value' must contain a valid date or date and time, for instance '1997-07-16' or '1994-11-05T13:15Z' (see https://www.w3.org/TR/NOTE-datetime).

   Line | Content
 >    1 | value: 2002 12 14
"
`;

exports[`datetime loader 2002-12-14 20:15 throws an error 1`] = `
"'value' must contain a valid date or date and time, for instance '1997-07-16' or '1994-11-05T13:15Z' (see https://www.w3.org/TR/NOTE-datetime).

   Line | Content
 >    1 | value: 2002-12-14 20:15
"
`;

exports[`datetime loader January throws an error 1`] = `
"'value' must contain a valid date or date and time, for instance '1997-07-16' or '1994-11-05T13:15Z' (see https://www.w3.org/TR/NOTE-datetime).

   Line | Content
 >    1 | value: January
"
`;
